compiler/tests/should-pass/Add10.via
fun add10(a: int{A}, b: out int{B}) {
    out b = declassify (endorse a to {A & B<-} from {A}) + 10 to {(A|B)-> & (A&B)<-};
}

process main {
    val array = Array[int]{A}(10);
    val a: int{A} = 0;
    add10(a, val b);
    output a to alice;
    output b to bob;
}

host alice: {A}
host bob: {B}
